Changelog
=========

0.1.3 (2016-08-16)
------------------

New
~~~

- Реализовал поддрежку HP SmartArray контроллеров, переписан скрипт
  мониторинга и оповещений. [Viktor A. Manyushin]

0.1.1 (2016-08-15)
------------------

- Создал новую структуру каталогов. [Viktor A. Manyushin]

- Первый релиз. Реализован мониторинг mdadm, adaptec RAID массивов.
  [Viktor A. Manyushin]

