@@ -9,6 +9,7 @@ cd $CWD
 . ../lib/vars.sh
 . ../lib/functions.sh
 . ../lib/utils.sh
+. ../lib/test_functions.sh
 
 EXIT_STATUS=0
 DEBUG=false
@@ -46,19 +47,16 @@ done
 
 if [[ $CONTROLLER_STATUS != "OK" ]]; then
 	logger -t raid-tools "Статус RAID контроллера '${CONTROLLER_STATUS}'"
-	send_notify "Обнаружен сбой в RAID контроллере" "Статус RAID контроллера: $CONTROLLER_STATUS"
 	EXIT_STATUS=1
 fi
 
 if [[ $CACHE_STATUS != "OK" ]]; then
 	logger -t raid-tools "Статус кэша RAID контроллера '${CACHE_STATUS}'"
-	send_notify "Обнаружен сбой в кэше RAID контроллере" "Статус кэша RAID контроллера: $CACHE_STATUS"
 	EXIT_STATUS=1
 fi
 
 if [[ $BATTERY_STATUS != "OK" ]]; then
 	logger -t raid-tools "Статус батареи RAID контроллера '${BATTERY_STATUS}'"
-	send_notify "Обнаружен сбой в батарее RAID контроллере" "Статус батареи RAID контроллера: $BATTERY_STATUS"
 	EXIT_STATUS=1
 fi
 
@@ -77,69 +75,57 @@ do
 		if [[ $count -eq 0 ]]; then
 			IFS=';' read -r -a volume <<< "$line"
 
+			# для тестирования
+			# status=$(test_hp_check_volume_status $CONTROLLER_SLOT ${volume[0]} ${volume[1]})
 			status=$(hp_check_volume_status $CONTROLLER_SLOT ${volume[0]} ${volume[1]})
 			[[ $DEBUG == true ]] && debug "hp_check_volume_status $CONTROLLER_SLOT ${volume[0]} ${volume[1]} = $status"
 			
-			if [[ $status == "1" ]]; then
+			if [[ $status != "OK" ]]; then
 				subj="Ошибка в дисковом массиве"
-				mesg="Номер массива: ${volume[0]}, Уровень массива: ${volume[1]}, Статус массива: ${volume[2]}"
-
-				logger -t raid-tools "$subj $mesg"
-				send_notify $subj $mesg
-				
+				mesg="Номер массива: ${volume[0]}, Уровень массива: ${volume[1]}, Статус массива: $status"
+				logger -t raid-tools "$subj $mesg"			
 				EXIT_STATUS=1
-			elif [[ $status == "2" ]]; then
-				volume_type=$(hp_get_volume_type $CONTROLLER_SLOT ${volume[1]})
+			fi
 
+			# для тестирования
+			# volume_type=$(test_hp_get_volume_type $CONTROLLER_SLOT ${volume[0]})
+			volume_type=$(hp_get_volume_type $CONTROLLER_SLOT ${volume[0]})
+
+			if [[ $volume_type != "${volume[1]}" ]]; then
 				subj="Уровень RAID массива изменился"
 				mesg="Номер массива: ${volume[0]}, Уровень массива указанные в конфигурации: ${volume[1]}, актуальный: $volume_type"
-
 				logger -t raid-tools "$subj $mesg"
-				send_notify $subj $mesg
-				
 				EXIT_STATUS=1
 			fi
 		fi
 
 		if [[ $count -gt 0 ]]; then
 			IFS=';' read -r -a disk <<< "$line"
+
+			# для тестирования
+			# status=$(test_hp_check_disk_status $CONTROLLER_SLOT ${disk[0]} ${disk[3]} ${disk[1]})
 			status=$(hp_check_disk_status $CONTROLLER_SLOT ${disk[0]} ${disk[3]} ${disk[1]})
+
 			[[ $DEBUG == true ]] && debug "hp_check_disk_status ${disk[0]} ${disk[3]} ${disk[1]} = $status"
 
-			if [[ $status == "1" ]]; then
-				subj="Обнаружена ошибка на жестком диске"
-				mesg="Порт: ${disk[0]}, Тип диска: ${disk[1]}, Модель диска: ${disk[2]}, Серийный номер: ${disk[3]}, Статус диска: ${disk[5]}"
-
-				logger -t raid-tools "$subj, $mesg"
-				send_notify $subj $mesg
-				
+			if [[ $status != "OK" ]]; then
 				EXIT_STATUS=1
-			elif [[ $status == "2" ]]; then
-				subj="Обнаружены изменения в конфигурации RAID массива"
-				mesg="Серийный номер диска на порту ${disk[0]} не соответствует ранее сохраненному ${disk[3]}"
+			fi
 
-				logger -t raid-tools "$subj, $mesg"
-				send_notify $subj $mesg
+			# для тестирования
+			# serial=$(test_hp_get_drive_serial $CONTROLLER_SLOT ${disk[0]})
+			serial=$(hp_get_drive_serial $CONTROLLER_SLOT ${disk[0]})
 
-				EXIT_STATUS=1
-			elif [[ $status == "3" ]]; then
-				drive_type=$(hp_get_drive_type $CONTROLLER_SLOT ${disk[0]})
+			if [[ $serial != "${disk[3]}" ]]; then
+				EXIT_STATUS=${EXIT_STATUS:-2}
+			fi
 
-				subj="Обнаружены изменения в конфигурации RAID массива"
-				mesg="Изменился тип диска на порту ${disk[0]}, Серийный номер ${disk[3]}, Тип диска указанный в конфигурации: ${disk[1]}, актуальный: $drive_type"
+			# для тестирования
+			# drive_type=$(test_hp_get_drive_type $CONTROLLER_SLOT ${disk[0]})
+			drive_type=$(hp_get_drive_type $CONTROLLER_SLOT ${disk[0]})
 
-				logger -t raid-tools "$subj, $mesg"
-				send_notify $subj $mesg
-
-				EXIT_STATUS=1
-			elif [[ $status == "4" ]]; then
-				subj="Обнаружены изменения в конфигурации RAID массива"
-				mesg="Диск подключенный на порт ${disk[0]} с серийным номером ${disk[3]} не найден"
-
-				logger -t raid-tools "$subj, $mesg"
-				send_notify $subj $mesg
-
-				EXIT_STATUS=1
+			if [[ $drive_type != "${disk[1]}" ]]; then
+				EXIT_STATUS=${EXIT_STATUS:-2}
 			fi
 		fi
 
@@ -147,12 +133,23 @@ do
 	done
 done
 
-if [[ $EXIT_STATUS == "0" ]]; then
-	send_notify "Ошибок не обнаружено" "Ошибок в массиве или дисках массива не обнаружено"
-fi
-
 IFS=$OLD_IFS
 rm -f ../var/run/hpacucli.lock
+
+sleep 1 && cd ..
+
+[[ $DEBUG == "true" ]] && debug "EXIT_STATUS = $EXIT_STATUS"
+
+if [[ $EXIT_STATUS == "1" ]]; then
+	
+ 	message=$(hp_make_report)
+ 	report="tmp/${RANDOM}.report.txt"
+ 	echo "$message" | lib/ansi2html.sh > $report
+ 	send_notify "Обнаружены ошибки в RAID массиве" $report
+ elif [[ $EXIT_STATUS == "2" ]]; then
+ 	AUTO_ANSWER="yes"
+ 	hp_raid_check 
+fi
 
 cd $OLD_CWD
 exit $EXIT_STATUS
