@@ -1,6 +1,16 @@
 Changelog
 =========
 
+%%version%% (unreleased)
+------------------------
+
+New
+~~~
+
+- Добавлены блокировки при запуски hpacucli через lockfile. fix: добавил
+  '-n' параметр для echo при получении base64 строки. [Viktor A.
+  Manyushin]
+
 0.1.3 (2016-08-16)
 ------------------
 
